Fixed alignment of logos

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -62,6 +62,7 @@ a {
     left: 0;
     right: 0;
     bottom: 0;
+    z-index: 2;
 
     background-color: @red;
     padding-left: @horizontal-padding;
@@ -97,7 +98,7 @@ a {
 
 .section__title {
     width: 100%;
-    margin-bottom: @spacing-lg;
+    margin-bottom: @spacing-xl;
 
     text-align: center;
     
@@ -183,6 +184,7 @@ a {
     position: absolute;
     right: 0;
     top: -7px;
+    z-index: 1;
 }
 
 .course-card__actions { 
@@ -242,9 +244,40 @@ a {
 }
 
 .section__logo-container {
-    .flex(row, space-between);
+    .flex(row, space-between, center);
 }
 
+@logo-height: 100px;
+@logo-width: 250px;
+
 .section__logo {
-    height: 125px;
+    height: @logo-height;
+    width: @logo-width;
+    margin-bottom: @spacing-xl;
+}
+
+.section__logo--sm {
+    height: @logo-height * .75;
+}
+
+.section__logo--lg {
+    height: @logo-height * 1.5;
+}
+
+.section__logo__image {
+    height: 100%;
+    display: block;
+    margin: 0 auto;
+}
+
+.footer {
+    background-color: @red;
+    color: #fff;
+
+    .flex(row, flex-start)
+}
+
+.footer__info {
+    width: 300px;
+    margin-left: @spacing;
 }
